--- a/package.json
+++ b/package.json
@@ -1,5 +1,7 @@
 {
   "name": "cusdis",
+  "engines": { "node": "22.x" },
+  "packageManager": "pnpm@9.7.1",
   "scripts": {
     "dev": "DB_TYPE=sqlite npm run dev:general",
     "dev:pg": "DB_TYPE=pgsql npm run dev:general",
