--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build": "DB_TYPE=pgsql npm run db:generate && DB_TYPE=pgsql npm run db:deploy && next build && npm run build:widget",
     "build:without-migrate": "npm run db:generate && next build && npm run build:widget",
     "db:deploy": "prisma migrate deploy --schema ./prisma/$DB_TYPE/schema.prisma",
-    "db:generate": "prisma generate --schema ./prisma/$DB_TYPE/schema.prisma",
+    "db:generate": "DB_TYPE=pgsql prisma generate --schema ./prisma/$DB_TYPE/schema.prisma",
     "db:push": "DB_TYPE=sqlite npm run db:push:general",
     "db:push:pg": "DB_TYPE=pgsql npm run db:push:general",
     "db:push:mysql": "DB_TYPE=mysql npm run db:push:general",
