--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "dev": "DB_TYPE=sqlite npm run dev:general",
     "dev:pg": "DB_TYPE=pgsql npm run dev:general",
     "dev:mysql": "DB_TYPE=mysql npm run dev:general",
-    "dev:general": "npm run db:deploy && npm run db:generate && next dev",
+    "dev:general": "npm run db:deploy && npm run db:generate && node server.js",
     "build": "DB_TYPE=pgsql npm run db:generate && DB_TYPE=pgsql npm run db:deploy && next build && npm run build:widget",
     "build:without-migrate": "DB_TYPE=pgsql npm run db:generate && next build && npm run build:widget",
     "db:deploy": "prisma migrate deploy --schema ./prisma/$DB_TYPE/schema.prisma",
@@ -21,7 +21,7 @@
     "db:migrateAll": "prisma migrate dev --schema ./prisma/sqlite/schema.prisma && prisma migrate dev --schema ./prisma/pgsql/schema.prisma && prisma migrate dev --schema ./prisma/mysql/schema.prisma",
     "admin": "prisma studio",
     "widget": "vite --config scripts/vite.config.js",
-    "start": "next start -p 3000",
+    "start": "node server.js",
     "start:with-migrate": "npm run db:generate && npm run db:deploy && next start -p 3000",
     "cp-widget-lang": "mkdir -p public/js/widget/lang && cp -r widget/lang public/js/widget",
     "build:widget": "npm run cp-widget-lang && vite build --config scripts/vite.widget.config.js && npm run build:sdk && npm run build:iframe && npm run build:count",
@@ -70,6 +70,8 @@
     "reflect-metadata": "^0.1.13",
     "resend": "^6.0.1",
     "rollup-plugin-svelte": "^7.1.0",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "svelte": "^3.37.0",
     "svelte-preprocess": "^4.7.0",
     "tailwindcss": "^2.1.1",
