--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "build:widget": "npm run cp-widget-lang && vite build --config scripts/vite.widget.config.js && npm run build:sdk && npm run build:iframe && npm run build:count",
     "build:sdk": "vite build --config scripts/vite.sdk.config.js",
     "build:iframe": "vite build --config scripts/vite.iframe.config.js",
-    "build:count": "vite build --config scripts/vite.count.config.js"
+    "build:count": "vite build --config scripts/vite.count.config.js",
+    "typecheck": "npx tsc --noEmit --skipLibCheck"
   },
   "prettier": "@egoist/prettier-config",
   "dependencies": {
